--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -98,7 +98,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.chequeRegisterList)
+                                    @foreach (var item in Model.ChequeRegisterList)
                                     {
                                         <tr>
                                             <th>@(++sl)</th>
