Bill requisition master slave labour function changed

--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -825,11 +825,11 @@
                     $("#unitTitle").text("Labor Rate");
 
                     // show hide input field
-                    $("#inputDivision").removeClass("d-block").addClass("hidden");
-                    $("#inputBoq").removeClass("d-block").addClass("hidden");
+                    //$("#inputDivision").removeClass("d-block").addClass("hidden");
+                    //$("#inputBoq").removeClass("d-block").addClass("hidden");
                     $("#inputEstimateQty").removeClass("d-block").addClass("hidden");
                     $("#inputRemainingQty").removeClass("d-block").addClass("hidden");
-                    $("#inputMaterial").removeClass("d-block").addClass("hidden");
+                    //$("#inputMaterial").removeClass("d-block").addClass("hidden");
                     $("#inputUnit").removeClass("d-block").addClass("hidden");
                     $("#inputReceivedSoFar").removeClass("d-block").addClass("hidden");
 
