--- a/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
@@ -80,7 +80,7 @@
                         <hr />
 
                         <div class="table-responsive">
-                            <table id="KgErpDataTable" class="table table-dark table-striped table-responsive">
+                            <table id="KgErpDataTable33" class="table table-dark table-striped table-responsive">
                                 <thead>
                                     <tr>
                                         <th width="3%">SL</th>
@@ -186,5 +186,8 @@
             $('#SOEditActionId').val(1);
         }
 
+        $('#KgErpDataTable33').dataTable({
+            "pageLength": 100
+        });
     </script>
 }
