--- a/KGERP/Views/BillRequisition/PDBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/PDBRApprovalList.cshtml
@@ -79,7 +79,7 @@
                         <hr />
 
                         <div class="table-responsive">
-                            <table id="KgErpDataTable" class="table table-dark table-striped table-responsive">
+                            <table id="KgErpDataTable33" class="table table-dark table-striped table-responsive">
                                 <thead>
                                     <tr>
                                         <th width="3%">SL</th>
@@ -109,17 +109,21 @@
                                             <td style="text-align: center">@item.TotalAmount</td>
                                             <td>
 
-                                                @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
+                                                @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending && @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                 {
-                                                    <span class="btn btn-xs btn-warning text-center" style="display: block; padding-left: 7px; padding-right: 7px;"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
+                                                    <span class="btn btn-xs btn-warning text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
                                                 }
                                                 @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
                                                 {
-                                                    <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
+                                                    <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
                                                 }
                                                 @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Rejected)
                                                 {
-                                                    <span class="btn btn-xs btn-danger text-center" style="display: block; padding-left: 7px; padding-right: 7px;"> @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
+                                                    <span class="btn btn-xs btn-danger text-center" style="display: block; padding-left: 7px; padding-right: 7px;">@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusName</span>
+                                                }
+                                                @if (@item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.PD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending && @item.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
+                                                {
+                                                    <span class="btn btn-xs btn-warning text-center" style="display: block; padding-left: 7px; padding-right: 7px;">Bypass</span>
                                                 }
 
                                             </td>
@@ -183,5 +187,8 @@
             $('#SOEditActionId').val(1);
         }
 
+        $('#KgErpDataTable33').dataTable({
+            "pageLength": 100
+        });
     </script>
 }
